force-app/main/default/objects/CreateRemoteSiteSetting__e/CreateRemoteSiteSetting__e.object-meta.xml
<CustomObject>
    <label>CreateRemoteSiteSetting</label>
    <pluralLabel>CreateRemoteSiteSettings</pluralLabel>
</CustomObject>