force-app/main/default/objects/CreateRemoteSiteSetting__e/fields/orgURL__c.field-meta.xml
<CustomField>
    <fullName>orgURL__c</fullName>
    <label>Org URL</label>
    <length>150</length>
    <type>Text</type>
</CustomField>