force-app/main/default/objects/CreateRemoteSiteSetting__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <label>Record Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>