force-app/main/default/objects/CreateRemoteSiteSetting__e/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <label>User Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>